--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,3 +2,19 @@
     margin: 0;
     padding: 0;
 }
+
+#lista-filmes {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+}
+
+#mostrar-filme {
+    background-color: white;
+    border-radius: 12px;
+    display: none;
+    height: 80vh;
+    margin: 10vh 10%;
+    position: fixed;
+    top: 0;
+    width: 80%;
+}
