--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,3 +28,15 @@
     border-radius: 100%;
     z-index: 10;
 }
+
+form#edit-favorite {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+form#edit-favorite > div {
+    display: flex;
+    gap: 10px;
+}
